2011-01-27  Jacob Dinu  <dinu.jacob@nokia.com>

Reviewed by Andreas Kling.

        [Qt] QtTestBrowser: User input lost when toggling use of QGraphicsView
        https://bugs.webkit.org/show_bug.cgi?id=48440

        Preserve user input when toggling use of QGraphicsView

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::initializeView):
        (LauncherWindow::loadFinished):
        * QtTestBrowser/launcherwindow.h:
        * QtTestBrowser/mainwindow.cpp:
        (MainWindow::addressUrl):
        * QtTestBrowser/mainwindow.h:

Canonical link: https://commits.webkit.org/67070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76860 268f45cc-cd09-0410-ab3c-d52691b4dbfc